--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
 
 .blocks .text {
     margin: 15%;
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 
@@ -90,3 +91,4 @@ body {
     display: flex;
     justify-content: center;
 }
+
